Mobile layout shift fixed

--- a/src/app/(games)/game.module.css
+++ b/src/app/(games)/game.module.css
@@ -13,7 +13,7 @@
 }
 
 .main h1 {
-    margin-bottom: 3rem;
+    font-size: 3rem;
     text-align: center;
     text-transform: capitalize;
     user-select: none;
