--- a/src/components/board.module.css
+++ b/src/components/board.module.css
@@ -4,7 +4,7 @@
     gap: 0.5rem;
 
     width: clamp(10vw, 30rem, 90vw);
-    margin-bottom: 15%;
+    margin: 2.5rem auto;
 
     padding: 1rem;
 
