--- a/src/components/customFooter.module.css
+++ b/src/components/customFooter.module.css
@@ -9,7 +9,7 @@
 }
 
 .customFooter>p {
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 }
 
 .author {
